--- a/admin-bookings.html
+++ b/admin-bookings.html
@@ -104,79 +104,47 @@
                                     <thead>
                                         <tr>
                                             <th>ID Booking</th>
-                                            <th>Nama Pengguna</th>
                                             <th>Lapangan</th>
                                             <th>Tanggal</th>
-                                            <th>Jam</th>
-                                            <th>Total</th>
                                             <th>Status</th>
-                                            <th>Aksi</th>
+                                            <th>Total</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td>#BK00127</td>
-                                            <td>Ahmad Jaelani</td>
                                             <td>Lapangan Mini Soccer</td>
                                             <td>15 Dec 2025</td>
-                                            <td>10:00 - 12:00</td>
-                                            <td>Rp 300.000</td>
                                             <td><span class="badge bg-success">Selesai</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="modal" data-bs-target="#viewBookingModal">Lihat</button>
-                                                <button class="btn btn-sm btn-outline-danger">Batalkan</button>
-                                            </td>
+                                            <td>Rp 300.000</td>
                                         </tr>
                                         <tr>
                                             <td>#BK00126</td>
-                                            <td>Siti Nurhaliza</td>
                                             <td>Lapangan Mini Soccer</td>
                                             <td>14 Dec 2025</td>
-                                            <td>09:00 - 11:00</td>
-                                            <td>Rp 300.000</td>
                                             <td><span class="badge bg-warning">Menunggu</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="modal" data-bs-target="#viewBookingModal">Lihat</button>
-                                                <button class="btn btn-sm btn-outline-success">Konfirmasi</button>
-                                                <button class="btn btn-sm btn-outline-danger">Batalkan</button>
-                                            </td>
+                                            <td>Rp 300.000</td>
                                         </tr>
                                         <tr>
                                             <td>#BK00125</td>
-                                            <td>Budi Santoso</td>
                                             <td>Lapangan Mini Soccer</td>
                                             <td>14 Dec 2025</td>
-                                            <td>14:00 - 16:00</td>
-                                            <td>Rp 300.000</td>
                                             <td><span class="badge bg-success">Dikonfirmasi</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="modal" data-bs-target="#viewBookingModal">Lihat</button>
-                                                <button class="btn btn-sm btn-outline-warning">Ubah</button>
-                                            </td>
+                                            <td>Rp 300.000</td>
                                         </tr>
                                         <tr>
                                             <td>#BK00124</td>
-                                            <td>Rina Kartika</td>
                                             <td>Lapangan Mini Soccer</td>
                                             <td>13 Dec 2025</td>
-                                            <td>16:00 - 18:00</td>
-                                            <td>Rp 300.000</td>
                                             <td><span class="badge bg-success">Selesai</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#viewBookingModal">Lihat</button>
-                                            </td>
+                                            <td>Rp 300.000</td>
                                         </tr>
                                         <tr>
                                             <td>#BK00123</td>
-                                            <td>Ahmad Jaelani</td>
                                             <td>Lapangan Mini Soccer</td>
                                             <td>10 Dec 2025</td>
-                                            <td>08:00 - 10:00</td>
-                                            <td>Rp 300.000</td>
                                             <td><span class="badge bg-danger">Dibatalkan</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#viewBookingModal">Lihat</button>
-                                            </td>
+                                            <td>Rp 300.000</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -335,6 +303,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/admin-bookings.js"></script>
 </body>
 </html>
