--- a/admin-payments.html
+++ b/admin-payments.html
@@ -106,53 +106,14 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>#BK00126</td>
-                                            <td>Siti Nurhaliza</td>
-                                            <td>Transfer Bank</td>
-                                            <td>Rp 240.000</td>
-                                            <td>15 Dec 2025, 14:30</td>
-                                            <td><span class="badge bg-warning">Menunggu</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-success me-1" data-bs-toggle="modal" data-bs-target="#confirmPaymentModal">Konfirmasi</button>
-                                                <button class="btn btn-sm btn-danger me-1" data-bs-toggle="modal" data-bs-target="#rejectPaymentModal">Tolak</button>
-                                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#viewProofModal">Lihat Bukti</button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>#BK00122</td>
-                                            <td>Andi Pratama</td>
-                                            <td>E-Wallet</td>
-                                            <td>Rp 150.000</td>
-                                            <td>14 Dec 2025, 10:15</td>
-                                            <td><span class="badge bg-warning">Menunggu</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-success me-1" data-bs-toggle="modal" data-bs-target="#confirmPaymentModal">Konfirmasi</button>
-                                                <button class="btn btn-sm btn-danger me-1" data-bs-toggle="modal" data-bs-target="#rejectPaymentModal">Tolak</button>
-                                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#viewProofModal">Lihat Bukti</button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>#BK00120</td>
-                                            <td>Budi Santoso</td>
-                                            <td>QRIS</td>
-                                            <td>Rp 300.000</td>
-                                            <td>13 Dec 2025, 16:45</td>
-                                            <td><span class="badge bg-success">Dikonfirmasi</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#viewProofModal">Lihat Bukti</button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>#BK00118</td>
-                                            <td>Rina Kartika</td>
-                                            <td>Transfer Bank</td>
-                                            <td>Rp 200.000</td>
-                                            <td>12 Dec 2025, 09:20</td>
-                                            <td><span class="badge bg-danger">Ditolak</span></td>
-                                            <td>
-                                                <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#viewProofModal">Lihat Bukti</button>
-                                                <button class="btn btn-sm btn-warning">Kirim Ulang</button>
+                                        <!-- Payments will be loaded dynamically by admin-payments.js -->
+                                        <tr id="noPaymentsRow">
+                                            <td colspan="7" class="text-center py-4">
+                                                <div class="text-muted">
+                                                    <i class="fas fa-info-circle fa-2x mb-2"></i>
+                                                    <p>Belum ada pembayaran yang menunggu konfirmasi.</p>
+                                                    <small>Pembayaran akan muncul di sini setelah customer mengupload bukti pembayaran.</small>
+                                                </div>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -277,6 +238,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/admin-payments.js"></script>
 </body>
 </html>
