--- a/booking-history.html
+++ b/booking-history.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/space-theme.css">
 </head>
 <body>
     <!-- Header -->
@@ -69,126 +70,10 @@
                     </div>
 
                     <!-- Booking List -->
-                    <div class="booking-list">
-                        <div class="card shadow-sm mb-3" v-for="booking in bookings" :key="booking.id">
-                            <div class="card-body">
-                                <div class="row align-items-center">
-                                    <div class="col-md-6">
-                                        <h5 class="mb-1">#{booking.id}</h5>
-                                        <p class="mb-1"><strong>{{booking.field.name}}</strong></p>
-                                        <p class="text-muted mb-0">{{booking.date}} | {{booking.time}}</p>
-                                        <p class="text-muted small">Durasi: {{booking.duration}} jam</p>
-                                    </div>
-                                    <div class="col-md-3 text-center">
-                                        <p class="mb-0"><strong>{{booking.total}}</strong></p>
-                                        <p class="text-muted small">Total Bayar</p>
-                                    </div>
-                                    <div class="col-md-2 text-center">
-                                        <span class="badge" :class="'bg-' + getStatusClass(booking.status)">
-                                            {{booking.status}}
-                                        </span>
-                                    </div>
-                                    <div class="col-md-1 text-end">
-                                        <a href="#" class="btn btn-sm btn-outline-primary">Detail</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Individual booking cards -->
-                        <div class="card shadow-sm mb-3">
-                            <div class="card-body">
-                                <div class="row align-items-center">
-                                    <div class="col-md-6">
-                                        <h5 class="mb-1">#BK00125</h5>
-                                        <p class="mb-1"><strong>Lapangan Mini Soccer</strong></p>
-                                        <p class="text-muted mb-0">22 Des 2025 | 10:00 - 12:00</p>
-                                        <p class="text-muted small">Durasi: 2 jam</p>
-                                    </div>
-                                    <div class="col-md-3 text-center">
-                                        <p class="mb-0"><strong>Rp 300.000</strong></p>
-                                        <p class="text-muted small">Total Bayar</p>
-                                    </div>
-                                    <div class="col-md-2 text-center">
-                                        <span class="badge bg-success">Selesai</span>
-                                    </div>
-                                    <div class="col-md-1 text-end">
-                                        <a href="#" class="btn btn-sm btn-outline-primary">Detail</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card shadow-sm mb-3">
-                            <div class="card-body">
-                                <div class="row align-items-center">
-                                    <div class="col-md-6">
-                                        <h5 class="mb-1">#BK00124</h5>
-                                        <p class="mb-1"><strong>Lapangan Mini Soccer</strong></p>
-                                        <p class="text-muted mb-0">20 Des 2025 | 14:00 - 16:00</p>
-                                        <p class="text-muted small">Durasi: 2 jam</p>
-                                    </div>
-                                    <div class="col-md-3 text-center">
-                                        <p class="mb-0"><strong>Rp 300.000</strong></p>
-                                        <p class="text-muted small">Total Bayar</p>
-                                    </div>
-                                    <div class="col-md-2 text-center">
-                                        <span class="badge bg-warning">Menunggu</span>
-                                    </div>
-                                    <div class="col-md-1 text-end">
-                                        <a href="#" class="btn btn-sm btn-outline-primary">Detail</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card shadow-sm mb-3">
-                            <div class="card-body">
-                                <div class="row align-items-center">
-                                    <div class="col-md-6">
-                                        <h5 class="mb-1">#BK00123</h5>
-                                        <p class="mb-1"><strong>Lapangan Mini Soccer</strong></p>
-                                        <p class="text-muted mb-0">15 Des 2025 | 09:00 - 11:00</p>
-                                        <p class="text-muted small">Durasi: 2 jam</p>
-                                    </div>
-                                    <div class="col-md-3 text-center">
-                                        <p class="mb-0"><strong>Rp 300.000</strong></p>
-                                        <p class="text-muted small">Total Bayar</p>
-                                    </div>
-                                    <div class="col-md-2 text-center">
-                                        <span class="badge bg-success">Selesai</span>
-                                    </div>
-                                    <div class="col-md-1 text-end">
-                                        <a href="#" class="btn btn-sm btn-outline-primary">Detail</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card shadow-sm mb-3">
-                            <div class="card-body">
-                                <div class="row align-items-center">
-                                    <div class="col-md-6">
-                                        <h5 class="mb-1">#BK00122</h5>
-                                        <p class="mb-1"><strong>Lapangan Mini Soccer</strong></p>
-                                        <p class="text-muted mb-0">10 Des 2025 | 16:00 - 18:00</p>
-                                        <p class="text-muted small">Durasi: 2 jam</p>
-                                    </div>
-                                    <div class="col-md-3 text-center">
-                                        <p class="mb-0"><strong>Rp 300.000</strong></p>
-                                        <p class="text-muted small">Total Bayar</p>
-                                    </div>
-                                    <div class="col-md-2 text-center">
-                                        <span class="badge bg-danger">Dibatalkan</span>
-                                    </div>
-                                    <div class="col-md-1 text-end">
-                                        <a href="#" class="btn btn-sm btn-outline-primary">Detail</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="booking-list" id="bookingList">
+                        <!-- Bookings will be loaded dynamically -->
                     </div>
-                    
+
                     <!-- Pagination -->
                     <nav aria-label="Booking history pagination" class="mt-4">
                         <ul class="pagination justify-content-center">
@@ -229,6 +114,25 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/history.js"></script>
+    <script>
+        // Refresh booking list when page becomes visible (in case status was updated elsewhere)
+        document.addEventListener('visibilitychange', function() {
+            if (!document.hidden) {
+                loadBookingHistory();
+            }
+        });
+
+        // Also refresh periodically every 30 seconds
+        setInterval(function() {
+            loadBookingHistory();
+        }, 30000);
+
+        // Refresh immediately when page loads
+        document.addEventListener('DOMContentLoaded', function() {
+            loadBookingHistory();
+        });
+    </script>
 </body>
 </html>
