--- a/dashboard-owner.html
+++ b/dashboard-owner.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Admin - Sports Field Rental</title>
+    <title>Dashboard Owner - Sports Field Rental</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/space-theme.css">
 </head>
 <body>
     <!-- Header -->
@@ -25,13 +26,14 @@
                         <a class="nav-link" href="booking.html">Booking Jadwal</a>
                     </li>
                     <li class="nav-item active dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Admin</a>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Owner</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item active" href="dashboard-admin.html">Dashboard</a></li>
+                            <li><a class="dropdown-item active" href="dashboard-owner.html">Dashboard Owner</a></li>
                             <li><a class="dropdown-item" href="admin-bookings.html">Kelola Booking</a></li>
                             <li><a class="dropdown-item" href="admin-payments.html">Konfirmasi Pembayaran</a></li>
+                            <li><a class="dropdown-item" href="admin-reports.html">Laporan Keuangan</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#" id="adminLogoutBtn">Logout</a></li>
+                            <li><a class="dropdown-item" href="#" id="ownerLogoutBtn">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -42,18 +44,18 @@
     <!-- Page Title -->
     <section class="page-title py-4 bg-light">
         <div class="container">
-            <h1>Dashboard Admin</h1>
+            <h1>Dashboard Owner</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard Admin</li>
+                    <li class="breadcrumb-item active">Dashboard Owner</li>
                 </ol>
             </nav>
         </div>
     </section>
 
-    <!-- Admin Dashboard Stats -->
-    <section class="admin-dashboard-stats py-4">
+    <!-- Owner Dashboard Stats -->
+    <section class="owner-dashboard-stats py-4">
         <div class="container">
             <div class="row g-4">
                 <div class="col-md-3">
@@ -96,8 +98,8 @@
         </div>
     </section>
 
-    <!-- Main Admin Content -->
-    <section class="admin-content py-5">
+    <!-- Main Owner Content -->
+    <section class="owner-content py-5">
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-8">
@@ -118,6 +120,7 @@
                                                 <th>Pengguna</th>
                                                 <th>Lapangan</th>
                                                 <th>Tanggal</th>
+                                                <th>Jam</th>
                                                 <th>Status</th>
                                                 <th>Total</th>
                                             </tr>
@@ -170,49 +173,18 @@
                         </div>
                     </div>
 
-                    <!-- Recent Payments -->
-                    <div class="recent-payments">
+                    <!-- Revenue Overview -->
+                    <div class="revenue-overview">
                         <div class="d-flex justify-content-between align-items-center mb-4">
-                            <h3>Konfirmasi Pembayaran</h3>
-                            <a href="admin-payments.html" class="btn btn-primary">Lihat Semua</a>
+                            <h3>Ikhtisar Pendapatan</h3>
+                            <button class="btn btn-outline-primary">Ekspor Laporan</button>
                         </div>
 
                         <div class="card">
                             <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>ID Booking</th>
-                                                <th>Pengguna</th>
-                                                <th>Bukti Bayar</th>
-                                                <th>Status</th>
-                                                <th>Aksi</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>#BK00126</td>
-                                                <td>Siti Nurhaliza</td>
-                                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal">Lihat Bukti</a></td>
-                                                <td><span class="badge bg-warning">Menunggu</span></td>
-                                                <td>
-                                                    <button class="btn btn-sm btn-success">Konfirmasi</button>
-                                                    <button class="btn btn-sm btn-danger">Tolak</button>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>#BK00122</td>
-                                                <td>Andi Pratama</td>
-                                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal">Lihat Bukti</a></td>
-                                                <td><span class="badge bg-warning">Menunggu</span></td>
-                                                <td>
-                                                    <button class="btn btn-sm btn-success">Konfirmasi</button>
-                                                    <button class="btn btn-sm btn-danger">Tolak</button>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                <div class="chart-placeholder text-center py-5">
+                                    <i class="fas fa-chart-line fa-3x text-muted mb-3"></i>
+                                    <p class="text-muted">Grafik pendapatan bulanan akan ditampilkan di sini</p>
                                 </div>
                             </div>
                         </div>
@@ -228,24 +200,72 @@
                                 <a href="admin-payments.html" class="btn btn-primary w-100 mb-2">
                                     <i class="fas fa-credit-card me-2"></i> Konfirmasi Pembayaran
                                 </a>
+                                <a href="admin-bookings.html" class="btn btn-outline-primary w-100 mb-2">
+                                    <i class="fas fa-calendar-check me-2"></i> Kelola Booking
+                                </a>
+                                <a href="admin-reports.html" class="btn btn-outline-success w-100 mb-2">
+                                    <i class="fas fa-file-invoice-dollar me-2"></i> Laporan Keuangan
+                                </a>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Admin Profile Card -->
-                    <div class="admin-profile mb-4">
-                        <h3>Profil Admin</h3>
+                    <!-- Owner Profile Card -->
+                    <div class="owner-profile mb-4">
+                        <h3>Profil Owner</h3>
                         <div class="card">
                             <div class="card-body text-center">
                                 <div class="profile-img-container mb-3">
                                     <div class="profile-img bg-primary rounded-circle d-inline-flex align-items-center justify-content-center" style="width: 80px; height: 80px;">
-                                        <i class="fas fa-user-shield text-white fa-2x"></i>
+                                        <i class="fas fa-crown text-white fa-2x"></i>
                                     </div>
                                 </div>
-                                <h5 id="adminName">Admin Utama</h5>
-                                <p class="text-muted" id="adminEmail">admin@sporstfield.com</p>
+                                <h5 id="ownerName">Owner Utama</h5>
+                                <p class="text-muted" id="ownerEmail">owner@sporstfield.com</p>
                                 <div class="d-grid gap-2">
                                     <a href="#" class="btn btn-outline-primary btn-sm">Edit Profil</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Notifications -->
+                    <div class="notifications">
+                        <h3>Notifikasi</h3>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="notification-item d-flex align-items-start p-3 border-bottom">
+                                    <div class="me-3">
+                                        <div class="icon bg-warning rounded-circle d-flex align-items-center justify-content-center" style="width: 32px; height: 32px;">
+                                            <i class="fas fa-exclamation text-white"></i>
+                                        </div>
+                                    </div>
+                                    <div class="flex-grow-1">
+                                        <h6 class="mb-0">Pembayaran Menunggu</h6>
+                                        <p class="text-muted mb-0 small">5 pembayaran menunggu konfirmasi</p>
+                                    </div>
+                                </div>
+                                <div class="notification-item d-flex align-items-start p-3 border-bottom">
+                                    <div class="me-3">
+                                        <div class="icon bg-success rounded-circle d-flex align-items-center justify-content-center" style="width: 32px; height: 32px;">
+                                            <i class="fas fa-check text-white"></i>
+                                        </div>
+                                    </div>
+                                    <div class="flex-grow-1">
+                                        <h6 class="mb-0">Booking Baru</h6>
+                                        <p class="text-muted mb-0 small">3 booking baru hari ini</p>
+                                    </div>
+                                </div>
+                                <div class="notification-item d-flex align-items-start p-3">
+                                    <div class="me-3">
+                                        <div class="icon bg-info rounded-circle d-flex align-items-center justify-content-center" style="width: 32px; height: 32px;">
+                                            <i class="fas fa-info text-white"></i>
+                                        </div>
+                                    </div>
+                                    <div class="flex-grow-1">
+                                        <h6 class="mb-0">Pemeliharaan Lapangan</h6>
+                                        <p class="text-muted mb-0 small">Jadwal pemeliharaan minggu depan</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -254,29 +274,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Payment Modal -->
-    <div class="modal fade" id="paymentModal" tabindex="-1">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Bukti Pembayaran</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body text-center">
-                    <img src="https://source.unsplash.com/600x400/?receipt" alt="Payment Proof" class="img-fluid rounded mb-3">
-                    <p><strong>Booking ID:</strong> #BK00126</p>
-                    <p><strong>Pengguna:</strong> Siti Nurhaliza</p>
-                    <p><strong>Total Pembayaran:</strong> Rp 240.000</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success">Konfirmasi Pembayaran</button>
-                    <button type="button" class="btn btn-danger">Tolak Pembayaran</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Footer -->
     <footer class="bg-dark text-white py-4">
@@ -300,6 +297,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
-    <script src="assets/js/admin-dashboard.js"></script>
+    <script src="assets/js/owner-dashboard.js"></script>
 </body>
 </html>
