--- a/dashboard-user.html
+++ b/dashboard-user.html
@@ -157,48 +157,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Upcoming Activities -->
-                    <div class="upcoming-activities mt-4">
-                        <h3>Booking Mendatang</h3>
-                        <div class="card shadow-sm">
-                            <div class="card-body">
-                                <div class="activity-list">
-                                    <div class="activity-item d-flex align-items-center p-3 border-bottom">
-                                        <div class="me-3">
-                                            <div class="icon bg-primary rounded-circle d-flex align-items-center justify-content-center" style="width: 40px; height: 40px;">
-                                                <i class="fas fa-futbol text-white"></i>
-                                            </div>
-                                        </div>
-                                        <div class="flex-grow-1">
-                                            <h6 class="mb-0">Lapangan Futsal Center Jakarta</h6>
-                                            <p class="text-muted mb-0">Besok, 16:00 - 18:00</p>
-                                        </div>
-                                        <div>
-                                            <button class="btn btn-sm btn-outline-primary">Lihat</button>
-                                        </div>
-                                    </div>
-                                    <div class="activity-item d-flex align-items-center p-3">
-                                        <div class="me-3">
-                                            <div class="icon bg-success rounded-circle d-flex align-items-center justify-content-center" style="width: 40px; height: 40px;">
-                                                <i class="fas fa-basketball-ball text-white"></i>
-                                            </div>
-                                        </div>
-                                        <div class="flex-grow-1">
-                                            <h6 class="mb-0">Stadium Basketball</h6>
-                                            <p class="text-muted mb-0">22 Dec 2025, 10:00 - 12:00</p>
-                                        </div>
-                                        <div>
-                                            <button class="btn btn-sm btn-outline-primary">Lihat</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
                     <!-- Quick Actions -->
                     <div class="quick-actions mb-4">
                         <h3>Aksi Cepat</h3>
@@ -206,6 +164,9 @@
                             <div class="card-body">
                                 <a href="booking.html" class="btn btn-primary w-100 mb-2">
                                     <i class="fas fa-plus me-2"></i> Booking Baru
+                                </a>
+                                <a href="cancel-booking.html" class="btn btn-outline-danger w-100 mb-2">
+                                    <i class="fas fa-times me-2"></i> Batalkan Pesanan
                                 </a>
                                 <a href="fields.html" class="btn btn-outline-primary w-100 mb-2">
                                     <i class="fas fa-list me-2"></i> Cari Lapangan
@@ -284,6 +245,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/dashboard-user.js"></script>
 </body>
 </html>
