--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/space-theme.css">
 </head>
 <body>
     <!-- Header -->
@@ -22,7 +23,7 @@
                         <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="booking.html">Booking Jadwal</a>
+                        <a class="nav-link" href="#" onclick="redirectToBooking(event)">Booking Jadwal</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Akun</a>
@@ -37,7 +38,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero-section py-5" style="background: linear-gradient(135deg, #006400 0%, #004d00 100%); color: white; position: relative; overflow: hidden;">
+    <section class="hero-section py-5">
         <div class="hero-background-shapes">
             <div class="shape shape-1"></div>
             <div class="shape shape-2"></div>
@@ -70,7 +71,7 @@
                 </div>
             </div>
             <div class="row g-4">
-                <div class="col-md-3 col-6">
+                <div class="col-md-4 col-8">
                     <div class="feature-card text-center">
                         <div class="feature-icon">
                             <i class="fas fa-futbol fa-3x mb-3"></i>
@@ -79,7 +80,7 @@
                         <p class="text-muted small">Rumput sintetis premium dengan perawatan berkala</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
+                <div class="col-md-4 col-8">
                     <div class="feature-card text-center">
                         <div class="feature-icon">
                             <i class="fas fa-lightbulb fa-3x mb-3"></i>
@@ -88,7 +89,7 @@
                         <p class="text-muted small">Lampu penerangan profesional untuk malam hari</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
+                <div class="col-md-4 col-8">
                     <div class="feature-card text-center">
                         <div class="feature-icon">
                             <i class="fas fa-parking fa-3x mb-3"></i>
@@ -97,14 +98,8 @@
                         <p class="text-muted small">Area parkir yang luas dan aman</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
+                <div class="col-md-4 col-8">
                     <div class="feature-card text-center">
-                        <div class="feature-icon">
-                            <i class="fas fa-shield-alt fa-3x mb-3"></i>
-                        </div>
-                        <h5>Aman & Nyaman</h5>
-                        <p class="text-muted small">Keamanan 24 jam dan area bersih</p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -128,7 +123,7 @@
                         <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Peralatan standar pertandingan</li>
                         <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Akses mudah ke lokasi</li>
                     </ul>
-                    <a href="booking.html" class="btn btn-primary">Booking Sekarang</a>
+                    <a href="#" class="btn btn-primary" onclick="redirectToBooking(event)">Booking Sekarang</a>
                 </div>
             </div>
         </div>
